kube/frontdoor-dep.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontdoor
  namespace: default
  labels:
    app: frontdoor
spec:
  ports:
  - name: service-port
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontdoor
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontdoor
  namespace: default
  labels:
    app: frontdoor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontdoor
  template:
    metadata:
      labels:
        app: frontdoor
    spec:
      containers:
      - name: frontdoor-nginx
        image: nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: service-port
          protocol: TCP
      - name: frontdoor-gateway
        image: bitvector/gateway:0.1.0
        imagePullPolicy: Always
        command: ["java"]
        args: ["-XX:MaxRAMPercentage=75", "-jar", "app.jar"]
        resources:
          limits:
            memory: "1024M"
