kube/frontdoor-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontdoor-nginx
  namespace: default
  labels:
    app: frontdoor-nginx
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontdoor-nginx
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontdoor-nginx
  namespace: default
  labels:
    app: frontdoor-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontdoor-nginx
  template:
    metadata:
      labels:
        app: frontdoor-nginx
    spec:
      volumes:
      - name: frontdoor-nginx
        configMap:
          name: frontdoor-nginx
      containers:
      - name: frontdoor-nginx
        image: nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http-port
          protocol: TCP
        volumeMounts:
        - name: frontdoor-nginx
          mountPath: /etc/nginx
          readOnly: true
