kube/frontdoor-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontdoor-istio
  namespace: default
  labels:
    app: frontdoor-istio
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
    hosts:
    - "frontdoor.bitvector.org"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
    - "frontdoor.bitvector.org"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontdoor-istio
  namespace: default
  labels:
    app: frontdoor-istio
spec:
  hosts:
  - "frontdoor.bitvector.org"
  gateways:
  - frontdoor-istio
  http:  # matching is order specific - "slash" must be at bottom to not shadow others
  - match:
    - uri:
        prefix: /r
    route:
    - destination:
        port:
          number: 8080
        host: frontdoor-gateway.default.svc.cluster.local
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: frontdoor-nginx.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbin-external
spec:
  hosts:
  - httpbin.org
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
